--- a/mocha-ui/css/ui.css
+++ b/mocha-ui/css/ui.css
@@ -210,6 +210,7 @@ body {
 /* Footer */
 #desktopFooterWrapper {
 	position: absolute;
+	left: 0;
 	bottom: 0;
 	width: 100%;
 	height: 30px;
@@ -660,7 +661,6 @@ iframe.zIndexFix {
 	top: 5px;
 	right: 2px;
 	z-index: 2;
-	text-align: right;
 }
 
 #dockPlacement {
